Remove z_utils from git tracking while preserving local files

--- a/.gitignore
+++ b/.gitignore
@@ -64,5 +64,5 @@ logs/
 **/niners_output/schedule_with_result_embedding.csv
 **/niners_output/schedule_with_result_embedding.gsheet
 
-Utilility files
+# Utility files
 z_utils/
