--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ langchain>=0.1.0
 langchain-openai>=0.0.5
 langchain-core>=0.1.15
 langchain-neo4j>=0.1.1
+langchain-community>=0.0.10
 openai>=1.2.0
 neo4j>=5.14.0
 python-dotenv>=1.0.0
