--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,6 +15,10 @@ python-dotenv = "~=1.1.0"
 uvicorn = {extras = ["standard"], version = "~=0.34.0"}
 websockets = "~=15.0.1"
 openai = "^1.77.0"
+langchain-openai = "^0.3.16"
+langchain-core = "^0.3.59"
+python-slugify = "^8.0.4"
+numpy = "^2.2.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
