--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -19,6 +19,7 @@ langchain-openai = "^0.3.16"
 langchain-core = "^0.3.59"
 python-slugify = "^8.0.4"
 numpy = "^2.2.5"
+zep-cloud = "^2.12.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
