--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -20,6 +20,9 @@ langchain-core = "^0.3.59"
 python-slugify = "^8.0.4"
 numpy = "^2.2.5"
 zep-cloud = "^2.12.1"
+colorama = "^0.4.6"
+langchain = "^0.3.25"
+langgraph = "^0.4.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
