--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,8 @@ services:
       - .env
     environment:
       DEBUG: false
-    command: uvicorn server:app --reload --host 0.0.0.0 --port 8000 --reload --log-level debug
+    # command: uvicorn server:app --reload --host 0.0.0.0 --port 8000 --reload --log-level debug
+    command: gradio server_gradio.py
 
 volumes:
   root_hist:
