first alpha deployed to huggingface

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -14,7 +14,8 @@ WORKDIR /code
 
 # Set environment variables for Python behavior and module discovery
 ENV PYTHONUNBUFFERED=1
-ENV PYTHONPATH="$PYTHONPATH:/code"
+# ENV PYTHONPATH="$PYTHONPATH:/code"
+ENV PYTHONPATH="${PYTHONPATH}:/code"
 
 # Setup history for interactive sessions (ensuring it’s mappable with a volume)
 RUN mkdir -p /root/history
@@ -49,7 +50,7 @@ COPY --from=base /usr/local/bin /usr/local/bin
 
 # Reapply the environment variables for runtime and module resolution
 ENV PYTHONUNBUFFERED=1
-ENV PYTHONPATH="$PYTHONPATH:/code"
+ENV PYTHONPATH="${PYTHONPATH}:/code"
 
 # Recreate history and Huggingface cache directories (so they can be mapped via Docker Compose)
 RUN mkdir -p /root/history
@@ -62,8 +63,8 @@ ENV HF_HOME="/huggingface_cache"
 # Copy the rest of your application code
 COPY . .
 
-# Expose your service port
-EXPOSE 8000
+# Expose gradio port
+EXPOSE 7860
 
 # Final command to run your app
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "server_gradio.py"]
