--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       - .env
     environment:
       DEBUG: false
+      DEV_MODE: true
     # command: uvicorn server:app --reload --host 0.0.0.0 --port 8000 --reload --log-level debug
     command: gradio server_gradio.py
 
